# FactorExpressionParser

./: AGENTS.md  CMakeLists.txt  README.md  因子运算符.md
doc/: lexer.md  parser.md
src/: Expr.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h  ast.cpp  ast.h  factor_evaluator.cpp  factor_evaluator.h  fepCore.cpp  fepCore.h  main.cpp  panel_types.h
tests/: CMakeLists.txt  test_eval.cpp  test_lexer.cpp  test_parser.cpp  test_perf.cpp
